# d1_retention

./: .gitignore  CLAUDE.md  PM_QUICKSTART.md  README.md  config.yaml  d1-retention-analysis.md  generate_catalog.py  primitives.md  pyproject.toml  request.md  tune  tune_mcp.py
data/dict/: app_d1_retention_health_daily.md  app_d1_retention_health_monthly.md  app_d1_retention_health_weekly.md  app_health_daily.md
data/docs/: acquisition_campaigns.md  data_dictionary.md  india_holidays.md  known_incidents.md  major_events.md  product_release_log.md  retention_methodology.md
data/sheets/: _registry.yaml  app_health_daily.csv  d1_retention.csv
tools/: _TEMPLATE.py  _common.py  _sheet_store.py  compare_to_baseline.py  compute_acquisition_mix_shift.py  compute_rolling_average.py  compute_signals_for_day.py  compute_stable_baseline.py  flag_dip_days.py  get_rows.py  list_docs.py  list_files.py  list_sheets.py  load_file.py
